--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hearlink</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://i.postimg.cc/NFVJhFMb/2.png" type="image/x-icon" />
+    <link rel="icon" href="https://i.postimg.cc/dVmdPvWN/2.png" type="image/x-icon" />
     
     
     <!-- Add your CSS file or styles here -->
